Improve the implementation of the eval_view
+ change the notebooks to match
+ switch everything to the filespec
+ bump up the python version on the final timeline

The original implementation had us pass in the start and end timestamp for the
ground truth to the viz function. But this could be problematic, as in the case
of the berkeley timeline, where there the ground truth depends on the start and
end timestamp.

So we get the ground truth for range that corresponds to the section that we
are trying to plot instead. This also simplifies the calling interface to the
function.

--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -238,8 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\",\n",
-    "                                          arrow.get(\"2019-01-01\").timestamp, arrow.get(\"2023-12-31\").timestamp)\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -261,8 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\",\n",
-    "                                          arrow.get(\"2019-01-01\").timestamp, arrow.get(\"2023-12-31\").timestamp)\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
