--- a/timeline_unimodal_car_bike_los_altos.ipynb
+++ b/timeline_unimodal_car_bike_los_altos.ipynb
@@ -85,9 +85,17 @@
    },
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")"
+    "\n",
+    "# If using ServerSpecDetails, data can alternatively be retrieved as such:\n",
+    "# DATASTORE_LOC = \"http://localhost:8080\"\n",
+    "# sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")\n",
+    "\n",
+    "# You must run `cd bin/ && python dump_data_to_file.py --spec-id unimodal_trip_car_bike_mtv_la`\n",
+    "# before using this notebook!\n",
+    "\n",
+    "DATASTORE_LOC = \"bin/data/\"\n",
+    "sdunp = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")"
    ]
   },
   {
@@ -116,9 +124,9 @@
    "outputs": [],
    "source": [
     "import arrow\n",
-    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"transitions\"]:\n",
-    "    if t[\"data\"][\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"data\"][\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
-    "        print(t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(sdunp.eval_tz))"
+    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_transitions\"]:\n",
+    "    if t[\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
+    "        print(t[\"trip_id\"], t[\"transition\"], t[\"trip_id\"], arrow.get(t[\"ts\"]).to(sdunp.eval_tz))"
    ]
   },
   {
@@ -127,7 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvunp.validate()"
+    "# validate is generally broken https://github.com/MobilityNet/mobilitynet.github.io/issues/29\n",
+    "# pvunp.validate()"
    ]
   },
   {
@@ -309,20 +318,6 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -341,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
