Remove pickling and switch the file spec instead
- Remove pickling
- Switch to using the file spec
- Bump up the version of geopandas and shapely to avoid
https://github.com/geopandas/geopandas/issues/1893
- Ensure that we import these libraries in the notebooks that are run as part
  of CI so that we can catch any future regressions

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -94,6 +94,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Not used in this notebook, but let's make sure that the imports work properly\n",
+    "import geopandas as gpd\n",
+    "import shapely as shp\n",
+    "import folium"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
