--- a/Evaluate_power_vs_classification_analysed.ipynb
+++ b/Evaluate_power_vs_classification_analysed.ipynb
@@ -113,12 +113,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_LOC = \"bin/data\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd_la = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")\n",
-    "sd_sj = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")\n",
-    "sd_ucb = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
-    "sd_ucb_reroute = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_sm_reroute_mtv_ucb\")"
+    "sd_la = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")\n",
+    "sd_sj = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")\n",
+    "sd_ucb = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
@@ -183,8 +182,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pv_ucb_reroute = eipv.PhoneView(sd_ucb_reroute)"
+    "range_0 = pv_la.map()[\"android\"][\"ucb-sdb-android-2\"][\"evaluation_ranges\"][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrow.get(range_0[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(range_0[\"end_ts\"]).to(\"America/Los_angeles\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in range_0[\"evaluation_trip_ranges\"]:\n",
+    "    print(arrow.get(t[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(t[\"end_ts\"]).to(\"America/Los_angeles\"))\n",
+    "    for s in t[\"evaluation_section_ranges\"]:\n",
+    "        print(\"-------\", arrow.get(s[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(s[\"end_ts\"]).to(\"America/Los_angeles\"))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -201,10 +226,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "av_la = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "av_sj = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "av_ucb = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "av_ucb_reroute = eapv.create_analysed_view(pv_ucb_reroute, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+    "importlib.reload(eapv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change this to the tag that we want to evaluate\n",
+    "MASTER_DATA_LOC = \"bin/data/master_9b70c97\"\n",
+    "eisd.FileSpecDetails(MASTER_DATA_LOC, AUTHOR_EMAIL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_la = eapv.create_analysed_view(pv_la, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range_0 = av_la.map()[\"ios\"][\"ucb-sdb-ios-3\"][\"evaluation_ranges\"][0]\n",
+    "for t in range_0[\"sensed_trip_ranges\"]:\n",
+    "    print(arrow.get(t[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(t[\"end_ts\"]).to(\"America/Los_angeles\"))\n",
+    "print(\"=======\")\n",
+    "for s in range_0[\"sensed_section_ranges\"]:\n",
+    "    print(arrow.get(s[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(s[\"end_ts\"]).to(\"America/Los_angeles\"))\n",
+    "print(\"=======\")\n",
+    "\n",
+    "for t in range_0[\"evaluation_trip_ranges\"]:\n",
+    "    print(arrow.get(t[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(t[\"end_ts\"]).to(\"America/Los_angeles\"))\n",
+    "    for s in t[\"sensed_section_ranges\"]:\n",
+    "        print(\"-------\", arrow.get(s[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(s[\"end_ts\"]).to(\"America/Los_angeles\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# av_la = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "av_sj = eapv.create_analysed_view(pv_sj, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "av_ucb = eapv.create_analysed_view(pv_ucb, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "# av_ucb_reroute = eapv.create_analysed_view(pv_ucb_reroute, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
    ]
   },
   {
@@ -275,15 +349,16 @@
     "\n",
     "                for tr in r[\"evaluation_trip_ranges\"]:\n",
     "                    matching_section_map = embs.find_matching_segments(tr[\"evaluation_section_ranges\"], \n",
-    "                                                                      \"trip_id\", \n",
-    "                                                                       [sr[\"data\"] for sr in tr[\"sensed_section_ranges\"]])\n",
+    "                                                                          \"trip_id\", \n",
+    "                                                                          tr[\"sensed_section_ranges\"])\n",
     "                    print(\"For trip %s, found matching ranges %s\" % (tr[\"trip_id\"], matching_section_map))\n",
     "                    for sid, msm in matching_section_map.items():\n",
     "                        for ms in msm[\"match\"]:\n",
     "                            ms[\"mode\"] = ms[\"sensed_mode\"]\n",
     "                    for section in tr[\"evaluation_section_ranges\"]:\n",
     "                        section_gt_leg = pv.spec_details.get_ground_truth_for_leg(tr[\"trip_id_base\"],\n",
-    "                                                                                  section[\"trip_id_base\"])\n",
+    "                                                                                  section[\"trip_id_base\"],\n",
+    "                                                                                  tr[\"start_ts\"], tr[\"end_ts\"])\n",
     "                        if section_gt_leg[\"type\"] == \"WAITING\":\n",
     "                            print(\"Skipping WAITING section %s %s with potential partway transitions\" %\n",
     "                                  (tr[\"trip_id\"], section[\"trip_id\"]))\n",
@@ -318,8 +393,17 @@
     "tradeoff_entries_list.extend(get_tradeoff_entries(av_la))\n",
     "tradeoff_entries_list.extend(get_tradeoff_entries(av_sj))\n",
     "tradeoff_entries_list.extend(get_tradeoff_entries(av_ucb))\n",
-    "tradeoff_entries_list.extend(get_tradeoff_entries(av_ucb_reroute))\n",
+    "# tradeoff_entries_list.extend(get_tradeoff_entries(av_ucb_reroute))\n",
     "tradeoff_df = pd.DataFrame(tradeoff_entries_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tradeoff_df.role.unique()"
    ]
   },
   {
@@ -335,18 +419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's merge the reroutes\n",
-    "tradeoff_df.timeline.replace(\"train_bus_ebike_sm_reroute_mtv_ucb\", \"train_bus_ebike_mtv_ucb\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r2q_map = {\"power_control\": 0, \"HAMFDC\": 1, \"MAHFDC\": 2, \"HAHFDC\": 3, \"accuracy_control\": 4}\n",
-    "q2r_map = {0: \"power\", 1: \"HAMFDC\", 2: \"MAHFDC\", 3: \"HAHFDC\", 4: \"accuracy\"}"
+    "r2q_map = {\"power_control\": 0, \"MAMFDC\": 1, \"HAMFDC\": 2, \"MAHFDC\": 3, \"HAHFDC\": 4, \"accuracy_control\": 5}\n",
+    "q2r_map = {0: \"power\", 1: \"MAMFDC\", 2: \"HAMFDC\", 3: \"MAHFDC\", 4: \"HAHFDC\", 5: \"accuracy\"}"
    ]
   },
   {
@@ -601,7 +675,7 @@
     "    eval_trip[\"motion_activity_df\"][\"fmt_time\"] = eval_trip[\"motion_activity_df\"].ts.apply(lambda ts: fmt(ts))\n",
     "    eval_section = [s for s in eval_trip[\"evaluation_section_ranges\"] if s[\"trip_id\"] == section_id][0]\n",
     "    print(fmt(eval_section[\"start_ts\"]), \"->\", fmt(eval_section[\"end_ts\"]))\n",
-    "    print([(fmt(ssr[\"data\"][\"start_ts\"]), fmt(ssr[\"data\"][\"end_ts\"]), ssr[\"data\"][\"mode\"])\n",
+    "    print([(fmt(ssr[\"start_ts\"]), fmt(ssr[\"end_ts\"]), ssr[\"mode\"])\n",
     "           for ssr in eval_trip[\"sensed_section_ranges\"]])\n",
     "    trip_ma_df = eval_trip[\"motion_activity_df\"]\n",
     "    # we may get some transitions after the trip ends \n",
@@ -617,7 +691,7 @@
     "    ipyd.display(curr_trip_section_transitions)\n",
     "    \n",
     "    last_section = eval_trip[\"evaluation_section_ranges\"][-1]\n",
-    "    last_section_gt = pv_ucb.spec_details.get_ground_truth_for_leg(eval_trip[\"trip_id_base\"], last_section[\"trip_id_base\"])\n",
+    "    last_section_gt = pv_ucb.spec_details.get_ground_truth_for_leg(eval_trip[\"trip_id_base\"], last_section[\"trip_id_base\"], eval_trip[\"start_ts\"], eval_trip[\"end_ts\"])\n",
     "    if last_section_gt[\"mode\"] == \"WALKING\":\n",
     "        # For trip that end in walking, we need to include still transitions as valid\n",
     "        # otherwise, there is no end transition from walking to a valid mode\n",
@@ -672,6 +746,24 @@
    "outputs": [],
    "source": [
     "tradeoff_df.query(\"matching_pct > 0\").sort_values(by=\"matching_pct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tradeoff_df.query(\"phone_os == 'ios' & phone_label == 'ucb-sdb-ios-3' & timeline == 'unimodal_trip_car_bike_mtv_la'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_la.map()['ios']['ucb-sdb-ios-3'][\"evaluation_ranges\"][0][\"evaluation_trip_ranges\"][0][\"sensed_section_ranges\"]"
    ]
   },
   {
@@ -742,7 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_outlier(pv_la.map()['android']['ucb-sdb-android-3'][\"evaluation_ranges\"][0], 0, \"walk_start_0\", \"WALKING\")"
+    "check_outlier(av_la.map()['android']['ucb-sdb-android-3'][\"evaluation_ranges\"][0], 0, \"walk_start_0\", \"WALKING\")"
    ]
   },
   {
@@ -760,7 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_outlier(pv_sj.map()['ios']['ucb-sdb-ios-3'][\"evaluation_ranges\"][0], 1, \"city_escooter_0\", \"CYCLING\")"
+    "check_outlier(av_sj.map()['ios']['ucb-sdb-ios-3'][\"evaluation_ranges\"][0], 1, \"city_escooter_0\", \"CYCLING\")"
    ]
   },
   {
@@ -769,7 +861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_outlier_expanded(pv_ucb.map()['android']['ucb-sdb-android-2'][\"evaluation_ranges\"][0], 2, \"commuter_rail_with_tunnels_0\", \"AUTOMOTIVE\")"
+    "check_outlier_expanded(av_ucb.map()['android']['ucb-sdb-android-2'][\"evaluation_ranges\"][0], 2, \"commuter_rail_with_tunnels_0\", \"AUTOMOTIVE\")"
    ]
   },
   {
@@ -778,7 +870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_outlier(pv_la.map()['android']['ucb-sdb-android-2'][\"evaluation_ranges\"][0], 0, \"suburb_city_driving_weekend_0\", \"AUTOMOTIVE\")"
+    "check_outlier(av_la.map()['android']['ucb-sdb-android-2'][\"evaluation_ranges\"][0], 0, \"suburb_city_driving_weekend_0\", \"AUTOMOTIVE\")"
    ]
   },
   {
@@ -805,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
