--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -733,9 +733,10 @@
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
-    "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "        # gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            [raw, clean, rf, gis], \n",
+    "            # [raw, clean, rf, gis], \n",
+    "            [raw, clean, rf],\n",
     "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
@@ -767,9 +768,10 @@
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
-    "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "        # gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            [raw, clean, rf, gis], \n",
+    "            # [raw, clean, rf, gis], \n",
+    "            [raw, clean, rf],\n",
     "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
@@ -965,7 +967,8 @@
     "    fig.text(0.08, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
     "    title = f\"Confusion Matrices for Phones Running {os}:{role}\"\n",
     "    fname = f\"images/selected_cm_{os}\"\n",
-    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
+    "    # for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
+    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb]]):\n",
     "        if k == 0:\n",
     "            sort_dict = {\n",
     "                'WALKING' : -1, 'RUNNING' : 0, 'CYCLING' : 1, 'AUTOMOTIVE' : 2, 'INVALID' : 3, \n",
@@ -1081,9 +1084,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gisv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "gisv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "gisv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+    "# Commented out until we can check in the gis branch results\n",
+    "# I am not sure how this worked in the first place given that we have the same datastore and the same\n",
+    "# trip and section fields as the random forest\n",
+    "# gisv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "# gisv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "# gisv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
    ]
   },
   {
@@ -1181,7 +1187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
+    "# plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
    ]
   },
   {
@@ -1190,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('android', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
+    "# plot_cm('android', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
    ]
   },
   {
@@ -1250,10 +1256,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\n",
-    "    \"GIS android \\t\",weighted_f_score('android', 'HAMFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM), '\\n',\n",
-    "    \"GIS ios \\t\", weighted_f_score('ios', 'HAHFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM)\n",
-    ")\n",
+    "# print(\n",
+    "#     \"GIS android \\t\",weighted_f_score('android', 'HAMFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM), '\\n',\n",
+    "#     \"GIS ios \\t\", weighted_f_score('ios', 'HAHFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM)\n",
+    "# )\n",
     "print(\n",
     "    \"Random Forest android \\t\",weighted_f_score('android', 'HAMFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM), '\\n',\n",
     "    \"Random Forest ios \\t\",weighted_f_score('ios', 'HAHFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM)\n",
@@ -1266,6 +1272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
     "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n"
    ]
@@ -1283,7 +1290,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
+    "# for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
+    "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
     "    w_n = (df['WALKING']['NO_SENSED_START'] + df['WALKING']['NO_SENSED_MIDDLE'] + df['WALKING']['NO_SENSED_END'])\n",
     "    print(\"NO_SENSED trip perdiction for WALKING android:HAMFDC: \\t\", w_n / df['WALKING'].sum())\n",
