getting rid of all calls to

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -979,11 +979,11 @@
     "            fname = f\"images/raw_cm_{os}\"\n",
     "        elif d_type == 'clean':\n",
     "            title = f\"Confusion Matrices for Clean Output Data on Phones Running {os} \\n by Calibration Settings\"\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "            fname = f\"images/clean_cm_{os}\"\n",
     "        elif d_type == 'random_forest' or 'gis':\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "            fname = f\"images/{d_type}_cm_{os}\"\n",
     "            if d_type == 'random_forest':\n",
@@ -1050,11 +1050,11 @@
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum()\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "        elif k == 1:\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=CIM).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=CIM)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "\n",
     "        else:\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=IIM).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=IIM)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "        df = df.reindex(\n",
     "            columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
