Revert "Temporarily remove references to the GIS branch"
This reverts commit e34d94872a7d6630923af1bf20573eb5a27cd353.

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -776,10 +776,9 @@
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
-    "        # gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            # [raw, clean, rf, gis], \n",
-    "            [raw, clean, rf],\n",
+    "            [raw, clean, rf, gis], \n",
     "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
@@ -813,10 +812,9 @@
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
-    "        # gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            # [raw, clean, rf, gis], \n",
-    "            [raw, clean, rf],\n",
+    "            [raw, clean, rf, gis], \n",
     "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
@@ -1044,8 +1042,7 @@
     "    fig.text(0.08, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
     "    title = f\"Confusion Matrices for Phones Running {os}:{role}\"\n",
     "    fname = f\"images/selected_cm_{os}\"\n",
-    "    # for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
-    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb]]):\n",
+    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
     "        if k == 0:\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum()\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
@@ -1164,12 +1161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Commented out until we can check in the gis branch results\n",
-    "# I am not sure how this worked in the first place given that we have the same datastore and the same\n",
-    "# trip and section fields as the random forest\n",
-    "# gisv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "# gisv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "# gisv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+    "gisv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "gisv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "gisv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
    ]
   },
   {
@@ -1279,7 +1273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
+    "plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
    ]
   },
   {
@@ -1289,7 +1283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_cm('android', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
+    "plot_cm('android', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM)"
    ]
   },
   {
@@ -1356,10 +1350,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\n",
-    "#     \"GIS android \\t\",weighted_f_score('android', 'HAMFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM), '\\n',\n",
-    "#     \"GIS ios \\t\", weighted_f_score('ios', 'HAHFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM)\n",
-    "# )\n",
+    "print(\n",
+    "    \"GIS android \\t\",weighted_f_score('android', 'HAMFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM), '\\n',\n",
+    "    \"GIS ios \\t\", weighted_f_score('ios', 'HAHFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM)\n",
+    ")\n",
     "print(\n",
     "    \"Random Forest android \\t\",weighted_f_score('android', 'HAMFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM), '\\n',\n",
     "    \"Random Forest ios \\t\",weighted_f_score('ios', 'HAHFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM)\n",
@@ -1373,7 +1367,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
     "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n"
    ]
@@ -1393,8 +1386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
-    "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb]]:\n",
+    "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
     "    w_n = (df['WALKING']['NO_SENSED_START'] + df['WALKING']['NO_SENSED_MIDDLE'] + df['WALKING']['NO_SENSED_END'])\n",
     "    print(\"NO_SENSED trip perdiction for WALKING android:HAMFDC: \\t\", w_n / df['WALKING'].sum())\n",
