--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -304,6 +304,7 @@
     "    \"RUNNING\" : \"WALKING\", \n",
     "    \"CYCLING\" : \"CYCLING\",\n",
     "    \"BICYCLING\": \"CYCLING\",\n",
+    "    \"E_BIKE\" : \"CYCLING\",\n",
     "    \"ESCOOTER\": \"CYCLING\", \n",
     "    \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "    \"BUS\": \"AUTOMOTIVE\",\n",
@@ -359,6 +360,7 @@
     "    \"RUNNING\" : \"WALKING\", \n",
     "    \"CYCLING\" : \"CYCLING\",\n",
     "    \"BICYCLING\": \"CYCLING\",\n",
+    "    \"E_BIKE\" : \"CYCLING\",\n",
     "    \"ESCOOTER\": \"CYCLING\", \n",
     "    \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "    \"BUS\": \"AUTOMOTIVE\",\n",
@@ -418,6 +420,7 @@
     "         \"WALKING\": \"WALKING\",\n",
     "         \"CYCLING\" : \"CYCLING\",\n",
     "         \"BICYCLING\": \"CYCLING\",\n",
+    "         \"E_BIKE\" : \"CYCLING\",\n",
     "         \"ESCOOTER\": \"CYCLING\", \n",
     "         \"BUS\": \"BUS\",\n",
     "         \"TRAIN\": \"TRAIN\",\n",
@@ -466,6 +469,7 @@
     "         \"WALKING\": \"WALKING\",\n",
     "         \"CYCLING\" : \"CYCLING\",\n",
     "         \"BICYCLING\": \"CYCLING\",\n",
+    "        \"E_BIKE\" : \"CYCLING\",\n",
     "         \"ESCOOTER\": \"CYCLING\", \n",
     "         \"BUS\": \"BUS\",\n",
     "         \"TRAIN\": \"TRAIN\",\n",
@@ -778,12 +782,13 @@
     "    fig, ax = plt.subplots(1,3, figsize = (15,5), dpi=300, sharey=True, sharex=True)\n",
     "    for i, role in enumerate(['HAHFDC', 'HAMFDC', 'MAHFDC']):\n",
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
-    "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
+    "        m_clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
+    "        g_clean = get_F_score(os, role, [gcv_la, gcv_sj, gcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
     "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            [raw, clean, rf, gis], \n",
-    "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
+    "            [raw, m_clean, g_clean, rf, gis], \n",
+    "            index = ['raw', 'master clean', 'GIS clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
     "        \n",
@@ -814,12 +819,13 @@
     "    fig, ax = plt.subplots(1,2, figsize = (10,3), dpi=300, sharey=True, sharex=True)\n",
     "    for i, (os, role) in enumerate([['android', 'HAMFDC'], ['ios', 'HAHFDC']]):\n",
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
-    "        clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
+    "        m_clean = get_F_score(os, role, [mcv_la, mcv_sj, mcv_ucb], CBMM)\n",
+    "        g_clean = get_F_score(os, role, [gcv_la, gcv_sj, gcv_ucb], CBMM)\n",
     "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
     "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
     "        df = pd.DataFrame(\n",
-    "            [raw, clean, rf, gis], \n",
-    "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
+    "            [raw, m_clean, g_clean, rf, gis], \n",
+    "            index = ['raw', 'master clean', 'GIS clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
     "        \n",
@@ -995,7 +1001,7 @@
     "        else:\n",
     "            assert 0, f'INVALID d_type {d_type}'\n",
     "        df = df.reindex(\n",
-    "            columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
+    "            columns=['WALKING', 'BICYCLING', 'E_BIKE', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
     "        ).fillna(0)\n",
     "#         df = df.div(df.sum(axis=1), axis=0)\n",
     "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
@@ -1040,17 +1046,22 @@
     "    IIM = {0 : 'UNKNOWN', 1 : 'WALKING', 2 : 'BICYCLING', 3 : 'BUS', 4 : 'TRAIN', 5 : 'CAR', 6 : 'AIR_OR_HSR', 7 : 'SUBWAY', 8 : 'TRAM', 9 : 'LIGHT_RAIL'\n",
     "    }\n",
     "    CIM = {0 : 'IN_VEHICLE', 1 : 'BICYCLING', 2 : 'ON_FOOT', 3 : 'STILL', 4 : 'UNKNOWN', 5 : 'TILTING', 7 : 'WALKING', 8 : 'RUNNING', 9 : 'NONE', 10 : 'STOPPED_WHILE_IN_VEHICLE', 11 : 'AIR_OR_HSR'}\n",
-    "    fig, ax = plt.subplots(1,4, figsize=(30,8), dpi=300, sharey=True)\n",
+    "    fig, ax = plt.subplots(1,5, figsize=(30,8), dpi=300, sharey=True)\n",
     "    y=.95\n",
     "    fig.text(0.5, -0.1, 'Predicted Label', ha='center', fontsize='xx-large')\n",
     "    fig.text(0.08, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
     "    title = f\"Confusion Matrices for Phones Running {os}:{role}\"\n",
     "    fname = f\"images/selected_cm_{os}\"\n",
-    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [mcv_la, mcv_sj, mcv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
+    "    for k, pv in enumerate(\n",
+    "        [[pv_la, pv_sj, pv_ucb], \n",
+    "         [mcv_la, mcv_sj, mcv_ucb],\n",
+    "         [gcv_la, gcv_sj, gcv_ucb], \n",
+    "         [rfv_la, rfv_sj, rfv_ucb], \n",
+    "         [gisv_la, gisv_sj, gisv_ucb]]):\n",
     "        if k == 0:\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum()\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
-    "        elif k == 1:\n",
+    "        elif k == 1 or k == 2:\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=CIM)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "\n",
@@ -1058,13 +1069,14 @@
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=IIM)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
     "        df = df.reindex(\n",
-    "            columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
+    "            columns=['WALKING', 'BICYCLING', 'E_BIKE', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
     "        ).fillna(0)\n",
     "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
     "        title_map = {0 : f'raw output confusion matrix \\n{os}:{role}', \n",
-    "                     1 : f'clean output confusion matrix \\n{os}:{role}', \n",
-    "                     2 : f'random forest output confusion matrix \\n{os}:{role}', \n",
-    "                     3 : f'GIS output confusion matrix \\n{os}:{role}'}\n",
+    "                     1 : f'master clean output confusion matrix \\n{os}:{role}',\n",
+    "                     2 : f'GIST clean output confusion matrix \\n{os}:{role}', \n",
+    "                     3 : f'random forest output confusion matrix \\n{os}:{role}', \n",
+    "                     4 : f'GIS output confusion matrix \\n{os}:{role}'}\n",
     "        ax[k].set_title(title_map[k])\n",
     "        tick_marks = np.arange(len(df))\n",
     "        ax[k].set_yticks(np.arange(len(df.columns)))\n",
@@ -1114,17 +1126,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "be6acb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MASTER_DATA_LOC = \"bin/data/master_9b70c97\"\n",
+    "master_spec = eisd.FileSpecDetails(MASTER_DATA_LOC, AUTHOR_EMAIL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cb29a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GIS_DATA_LOC = \"bin/data/gis_9b679e3/\"\n",
+    "gis_spec = eisd.FileSpecDetails(GIS_DATA_LOC, AUTHOR_EMAIL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "504562b6",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "MASTER_DATA_LOC = \"bin/data/master_9b70c97\"\n",
-    "master_spec = eisd.FileSpecDetails(MASTER_DATA_LOC, AUTHOR_EMAIL)\n",
     "mcv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
     "mcv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
     "mcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc73be64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
+    "gcv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
+    "gcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
    ]
   },
   {
@@ -1165,8 +1209,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GIS_DATA_LOC = \"bin/data/gis_9b679e3/\"\n",
-    "gis_spec = eisd.FileSpecDetails(GIS_DATA_LOC, AUTHOR_EMAIL)\n",
     "gisv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
     "gisv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
     "gisv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))"
@@ -1195,7 +1237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('ios', [pv_la], 'raw')"
+    "plot_cm('ios', [pv_la, pv_sj, pv_ucb], 'raw')"
    ]
   },
   {
@@ -1203,7 +1245,7 @@
    "execution_count": null,
    "id": "370de752",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1223,7 +1265,7 @@
    "execution_count": null,
    "id": "0e3316e7",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1335,11 +1377,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f2548b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_select_cm('ios', 'HAHFDC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d415ad45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_select_cm('ios', 'HAHFDC')\n",
     "plot_select_cm('android', 'HAMFDC')"
    ]
   },
@@ -1368,17 +1419,6 @@
     "    \"Random Forest android \\t\",weighted_f_score('android', 'HAMFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM), '\\n',\n",
     "    \"Random Forest ios \\t\",weighted_f_score('ios', 'HAHFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cac5706",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for pv_l in [[pv_la, pv_sj, pv_ucb],[mcv_la, mcv_sj, mcv_ucb],[rfv_la,rfv_sj,rfv_ucb]]:\n",
-    "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n"
    ]
   },
   {
