Support both master and gis for verification
And verify master and gis against each other

--- a/Verify_analysed_data_retrieval.ipynb
+++ b/Verify_analysed_data_retrieval.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "MASTER_DATA_LOC = \"bin/data/master_9b70c97\"\n",
-    "eisd.FileSpecDetails(MASTER_DATA_LOC, AUTHOR_EMAIL)"
+    "master_spec = eisd.FileSpecDetails(MASTER_DATA_LOC, AUTHOR_EMAIL)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "av_la = eapv.create_analysed_view(pv_la, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+    "av_la_master = eapv.create_analysed_view(pv_la, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
    ]
   },
   {
@@ -219,7 +219,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "range_0 = av_la.map()[\"ios\"][\"ucb-sdb-ios-3\"][\"evaluation_ranges\"][0]\n",
+    "GIS_DATA_LOC = \"bin/data/gis_9b679e3/\"\n",
+    "gis_spec = eisd.FileSpecDetails(GIS_DATA_LOC, AUTHOR_EMAIL)\n",
+    "av_la_gis = eapv.create_analysed_view(pv_la, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range_0 = av_la_master.map()[\"ios\"][\"ucb-sdb-ios-3\"][\"evaluation_ranges\"][0]\n",
     "for t in range_0[\"sensed_trip_ranges\"]:\n",
     "    print(arrow.get(t[\"start_ts\"]).to(\"America/Los_angeles\"), arrow.get(t[\"end_ts\"]).to(\"America/Los_angeles\"))\n",
     "print(\"=======\")\n",
@@ -240,8 +251,8 @@
    "outputs": [],
    "source": [
     "# av_la = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "av_sj = eapv.create_analysed_view(pv_sj, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "av_ucb = eapv.create_analysed_view(pv_ucb, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "# av_sj = eapv.create_analysed_view(pv_sj, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "# av_ucb = eapv.create_analysed_view(pv_ucb, eisd.FileSpecDetails(\"bin/data/master_9b70c97\", AUTHOR_EMAIL), \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
     "# av_ucb_reroute = eapv.create_analysed_view(pv_ucb_reroute, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
    ]
   },
@@ -286,7 +297,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "verify_analysed_view(av_la)"
+    "verify_analysed_view(av_la_master)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_ranges(eval_range_a, eval_range_b):\n",
+    "    if len(eval_range_a[\"sensed_trip_ranges\"]) > len(eval_range_b[\"sensed_trip_ranges\"]):\n",
+    "        print(f\"MISMATCH: extra trip found in range_a\")\n",
+    "    if len(eval_range_a[\"sensed_trip_ranges\"]) < len(eval_range_b[\"sensed_trip_ranges\"]):\n",
+    "        print(f\"MISMATCH: extra trip found in range_b\")\n",
+    "    for i, (t_a, t_b) in enumerate(zip(eval_range_a[\"evaluation_trip_ranges\"], eval_range_b[\"evaluation_trip_ranges\"])):\n",
+    "        if len(t_a[\"sensed_section_ranges\"]) > len(t_b[\"sensed_section_ranges\"]):\n",
+    "            print(f\"MISMATCH: extra section found in range_a {len(t_a['sensed_section_ranges'])} > {len(t_b['sensed_section_ranges'])}\")\n",
+    "        if len(t_a[\"sensed_section_ranges\"]) < len(t_b[\"sensed_section_ranges\"]):\n",
+    "            print(f\"MISMATCH: extra section found in range_b {len(t_a['sensed_section_ranges'])} < {len(t_b['sensed_section_ranges'])}\")\n",
+    "        for i, (s_a, s_b) in enumerate(zip(t_a[\"sensed_section_ranges\"], t_b[\"sensed_section_ranges\"])):\n",
+    "            if s_a[\"sensed_mode\"] != s_b[\"sensed_mode\"]:\n",
+    "                print(f\"MISMATCH: sensed_mode for section {i} {s_a['sensed_mode']} != {s_b['sensed_mode']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_analysed_views(av_a, av_b):\n",
+    "    for phone_os, phone_map in av_a.map().items():\n",
+    "        print(15 * \"=*\")\n",
+    "        for phone_label, phone_detail_map in phone_map.items():\n",
+    "            for i, r_a in enumerate(phone_detail_map[\"evaluation_ranges\"]):\n",
+    "                print(8 * ' ', 30 * \"=\")\n",
+    "                print(8 * ' ',phone_os, phone_label, r_a[\"trip_id\"], r_a[\"eval_common_trip_id\"], r_a[\"eval_role\"])\n",
+    "                if \"control\" not in r_a[\"eval_role\"]:\n",
+    "                    r_b = av_b.map()[phone_os][phone_label][\"evaluation_ranges\"][i]\n",
+    "                    compare_ranges(r_a, r_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_analysed_views(av_la_master, av_la_gis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_ucb_master = eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_ucb_gis = eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_analysed_views(av_ucb_master, av_ucb_gis)"
    ]
   },
   {
