--- a/outputs_for_validation/Verify_analysed_data_retrieval_gis.ipynb
+++ b/outputs_for_validation/Verify_analysed_data_retrieval_gis.ipynb
@@ -6205,6 +6205,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_analysed_views(av):\n",
+    "    for phone_os, phone_map in av.map().items():\n",
+    "        print(15 * \"=*\")\n",
+    "        for phone_label, phone_detail_map in phone_map.items():\n",
+    "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
+    "                print(8 * ' ', 30 * \"=\")\n",
+    "                print(8 * ' ',phone_os, phone_label, r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"])\n",
+    "                if \"control\" not in r[\"eval_role\"]:\n",
+    "                    verify_range(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
