Made suggested ammends

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "%%capture\n",
     "pv_la = eipv.PhoneView(sd_la)\n",
-    "# pv_sj = eipv.PhoneView(sd_sj)\n",
+    "pv_sj = eipv.PhoneView(sd_sj)\n",
     "# pv_ucb = eipv.PhoneView(sd_ucb)"
    ]
   },
@@ -201,7 +201,7 @@
    "source": [
     "FILE_MAPPING = {\n",
     "    pv_la: \"unimodal_trip_car_bike_mtv_la\",\n",
-    "    # pv_sj: \"car_scooter_brex_san_jose\",\n",
+    "    pv_sj: \"car_scooter_brex_san_jose\",\n",
     "    # pv_ucb: \"train_bus_ebike_mtv_ucb\"\n",
     "}"
    ]
@@ -215,7 +215,7 @@
    "source": [
     "%%capture\n",
     "ems.fill_sensed_section_ranges(pv_la)\n",
-    "# ems.fill_sensed_section_ranges(pv_sj)\n",
+    "ems.fill_sensed_section_ranges(pv_sj)\n",
     "# ems.fill_sensed_section_ranges(pv_ucb)"
    ]
   },
@@ -236,7 +236,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "def get_gt_location_data(trip_id: str, section_id: str):\n",
+    "def get_reference_trajectory(trip_id: str, section_id: str):\n",
     "\n",
     "    root = Path(\"./bin/data\")\n",
     "    return_file = None\n",
@@ -272,26 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effccbd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = get_gt_location_data('unimodal_trip_car_bike_mtv_la', 'suburb_bicycling')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1dd54d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# display(x.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c92e50d1",
    "metadata": {},
    "outputs": [],
@@ -311,7 +291,7 @@
     "                    continue\n",
     "                tr_ss  = []\n",
     "                tr_gts = []\n",
-    "                gt_dfs = []\n",
+    "                gt_traj = []\n",
     "                \n",
     "                for i, tr in enumerate(r[\"evaluation_trip_ranges\"]):\n",
     "                    for ss in tr[\"sensed_section_ranges\"]:\n",
@@ -333,20 +313,17 @@
     "\n",
     "                        tr_gts.append(gts)\n",
     "\n",
-    "                    gt_location_data = get_gt_location_data(FILE_MAPPING[pv], tr['trip_id_base'])\n",
+    "                    gt_trajectory_data = get_reference_trajectory(FILE_MAPPING[pv], tr['trip_id_base'])\n",
     "                    run_id = r['trip_run']\n",
-    "                    print(run_id, tr['trip_id'], tr['trip_id'])\n",
-    "                    gt_location_data = gt_location_data.query(\"source == @os\")\n",
-    "                    gt_location_data = gt_location_data.loc[gt_location_data.run == str(run_id), :].reset_index(drop=True, inplace=False)\n",
-    "                    gt_dfs.append(gt_location_data)\n",
-    "\n",
-    "                print(5*'-')\n",
+    "                    gt_trajectory_data = gt_trajectory_data.query(\"source == @os\")\n",
+    "                    gt_trajectory_data = gt_trajectory_data.loc[gt_trajectory_data.run == str(run_id), :].reset_index(drop=True, inplace=False)\n",
+    "                    gt_traj.append(gt_trajectory_data)\n",
     "\n",
     "                # now, we build a timeline for each trip\n",
     "                trip = tr.copy()\n",
     "                trip['ss_timeline']  = tr_ss\n",
     "                trip['gts_timeline'] = tr_gts\n",
-    "                trip['gt_location_df'] = gt_dfs\n",
+    "                trip['gt_trajectory'] = pd.concat(gt_traj, axis=0).reset_index(drop=True, inplace=False)\n",
     "                \n",
     "                trips.append(trip)\n",
     "    \n",
@@ -731,8 +708,7 @@
     "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "    TP, FN, FP, TN = {}, {}, {}, {}\n",
     "    for trip in trips:\n",
-    "        gt_location_df = trip['gt_location_df']\n",
-    "        print(gt_location_df.shape)\n",
+    "        gt_trajectory = trip['gt_trajectory']\n",
     "        ss_timeline, gt_timeline = align_timelines(trip)\n",
     "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in ss_timeline:\n",
@@ -741,8 +717,8 @@
     "                        range_start = max(ss['start_ts'], gts['start_ts'])\n",
     "                        range_end = min(ss['end_ts'], gts['end_ts'])\n",
     "\n",
-    "                        filtered_gt_distance = gt_location_df.loc[\n",
-    "                            (gt_location_df.ts >= range_start) & (gt_location_df.ts <= range_end), :\n",
+    "                        filtered_gt_distance = gt_trajectory.loc[\n",
+    "                            (gt_trajectory.ts >= range_start) & (gt_trajectory.ts <= range_end), :\n",
     "                        ]\n",
     "\n",
     "                        if filtered_gt_distance.shape[0] == 0:\n",
@@ -752,9 +728,11 @@
     "                        \n",
     "                        if dist > 0:\n",
     "                            print(f\"{range_start=}, {range_end=}\")\n",
-    "                            print(f\"{gt_location_df.ts.min()=}, {gt_location_df.ts.max()=}\")\n",
+    "                            print(f\"{filtered_gt_distance.ts.min()=}, {filtered_gt_distance.ts.max()=}\")\n",
     "                            print(\"Computed distance: \", dist)\n",
     "                            print(50*'-')\n",
+    "\n",
+    "                        # dur = range_end - range_start\n",
     "\n",
     "                        # if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
     "                        #     TP[mode] = TP.setdefault(mode, 0) + dur\n",
@@ -775,16 +753,6 @@
     "                            TN[mode] = TN.setdefault(mode, 0) + dist\n",
     "                    \n",
     "    return TP, FP, FN, TN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5ddf739",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get_binary_class_in_sec('android', 'HAHFDC', pv_la, RBMM)"
    ]
   },
   {
@@ -1055,7 +1023,7 @@
     "    else:\n",
     "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "    for trip in trips:\n",
-    "        gt_location_df = trip['gt_location_df']\n",
+    "        gt_trajectory = trip['gt_trajectory']\n",
     "        ss_timeline, gt_timeline = align_timelines(trip)\n",
     "        for ss in ss_timeline:\n",
     "            cm = {}\n",
@@ -1065,15 +1033,15 @@
     "                    range_start = max(ss['start_ts'], gts['start_ts'])\n",
     "                    range_end = min(ss['end_ts'], gts['end_ts'])\n",
     "\n",
-    "                    filtered_gt_distance = gt_location_df.loc[\n",
-    "                        (gt_location_df.ts >= range_start) & (gt_location_df.ts <= range_end), :\n",
+    "                    filtered_gt_trajectory = gt_trajectory.loc[\n",
+    "                        (gt_trajectory.ts >= range_start) & (gt_trajectory.ts <= range_end), :\n",
     "                    ]\n",
     "\n",
-    "                    if filtered_gt_distance.shape[0] == 0:\n",
+    "                    if filtered_gt_trajectory.shape[0] == 0:\n",
     "                        dist = 0\n",
     "                    else:\n",
-    "                        dist = add_dist(filtered_gt_distance).distance.sum()\n",
-    "                        \n",
+    "                        dist = add_dist(filtered_gt_trajectory).distance.sum()\n",
+    "                    \n",
     "                    # cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dur\n",
     "                    cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dist\n",
     "            \n",
@@ -1126,6 +1094,12 @@
     "    y=.95\n",
     "    fig.text(0.5, 0.0, 'Predicted Label', ha='center', fontsize='xx-large')\n",
     "    fig.text(0.04, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
+    "\n",
+    "    # Small snippet to create an op folder.\n",
+    "    op_dir = Path(\"./images\")\n",
+    "    if not op_dir.exists():\n",
+    "        op_dir.mkdir()\n",
+    "\n",
     "    for k, role in enumerate([\"HAHFDC\", \"HAMFDC\", \"MAHFDC\"]):\n",
     "        if d_type =='raw':\n",
     "            title = f\"Confusion Matrices for Raw Output Data on Phones Running {os} \\n by Calibration Settings\"\n",
@@ -1312,9 +1286,10 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "mcv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
     "mcv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
-    "mcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
+    "# mcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
    ]
   },
   {
@@ -1327,7 +1302,7 @@
     "%%capture\n",
     "gcv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
     "gcv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))\n",
-    "gcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
+    "# gcv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\"))"
    ]
   },
   {
@@ -1350,7 +1325,7 @@
     "%%capture\n",
     "rfv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
     "rfv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
-    "rfv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))"
+    "# rfv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, master_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))"
    ]
   },
   {
@@ -1372,7 +1347,7 @@
     "%%capture\n",
     "gisv_la   = copy.deepcopy(eapv.create_analysed_view(pv_la, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
     "gisv_sj   = copy.deepcopy(eapv.create_analysed_view(pv_sj, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))\n",
-    "gisv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))"
+    "# gisv_ucb  = copy.deepcopy(eapv.create_analysed_view(pv_ucb, gis_spec, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\"))"
    ]
   },
   {
